--- a/workspace/scala.ipynb
+++ b/workspace/scala.ipynb
@@ -96,9 +96,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[32mimport \u001b[39m\u001b[36morg.apache.spark.sql._\n",
+       "\n",
+       "\u001b[39m\n",
+       "\u001b[36mspark\u001b[39m: \u001b[32mSparkSession\u001b[39m = org.apache.spark.sql.SparkSession@390c4e73"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import org.apache.spark.sql._\n",
     "\n",
@@ -144,20 +165,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\u001b[36mdata\u001b[39m: \u001b[32mDataFrame\u001b[39m = [Description: string, Real GDP of England at market prices: string ... 75 more fields]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "val data = spark.read.format(\"csv\").option(\"sep\", \",\").option(\"header\", \"true\").load(\"data/uk-macroeconomic-data.csv\")"
    ]
@@ -171,40 +181,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\u001b[36mres4\u001b[39m: \u001b[32mLong\u001b[39m = \u001b[32m841L\u001b[39m"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data.count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\u001b[36mres5\u001b[39m: \u001b[32mInt\u001b[39m = \u001b[32m77\u001b[39m"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data.columns.size"
    ]
@@ -234,56 +222,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div class=\"jp-RenderedText\">\n",
-       "<pre><code><span style=\"color: rgb(0, 187, 187)\"><span class=\"ansi-cyan-fg\">unemployment</span></span>: <span style=\"color: rgb(0, 187, 0)\"><span class=\"ansi-green-fg\">DataFrame</span></span> = <style>@keyframes fadein { from { opacity: 0; } to { opacity: 1; } }</style><span style=\"animation: fadein 2s;\">[year: string, population: string ... 1 more field]</span></code></pre>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "\u001b[36munemployment\u001b[39m: \u001b[32mDataFrame\u001b[39m = [year: string, population: string ... 1 more field]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "var unemployment = data.select(\"Description\", \"Population (GB+NI)\", \"Unemployment rate\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-----------+------------------+-----------------+\n",
-      "|Description|Population (GB+NI)|Unemployment rate|\n",
-      "+-----------+------------------+-----------------+\n",
-      "|      Units|              000s|                %|\n",
-      "|       1209|              null|             null|\n",
-      "|       1210|              null|             null|\n",
-      "|       1211|              null|             null|\n",
-      "|       1212|              null|             null|\n",
-      "|       1213|              null|             null|\n",
-      "|       1214|              null|             null|\n",
-      "|       1215|              null|             null|\n",
-      "|       1216|              null|             null|\n",
-      "|       1217|              null|             null|\n",
-      "+-----------+------------------+-----------------+\n",
-      "only showing top 10 rows\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "unemployment.show(10)"
    ]
@@ -306,49 +256,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\u001b[36mcols_description\u001b[39m: \u001b[32mDataset\u001b[39m[\u001b[32mRow\u001b[39m] = [Description: string, Population (GB+NI): string ... 1 more field]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "val cols_description = unemployment.filter(unemployment(\"Description\") === \"Units\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-----------+------------------+-----------------+\n",
-      "|Description|Population (GB+NI)|Unemployment rate|\n",
-      "+-----------+------------------+-----------------+\n",
-      "|      Units|              000s|                %|\n",
-      "+-----------+------------------+-----------------+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cols_description.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,32 +283,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-----------+------------------+-----------------+\n",
-      "|Description|Population (GB+NI)|Unemployment rate|\n",
-      "+-----------+------------------+-----------------+\n",
-      "|       1209|              null|             null|\n",
-      "|       1210|              null|             null|\n",
-      "|       1211|              null|             null|\n",
-      "|       1212|              null|             null|\n",
-      "|       1213|              null|             null|\n",
-      "|       1214|              null|             null|\n",
-      "|       1215|              null|             null|\n",
-      "|       1216|              null|             null|\n",
-      "|       1217|              null|             null|\n",
-      "|       1218|              null|             null|\n",
-      "+-----------+------------------+-----------------+\n",
-      "only showing top 10 rows\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "unemployment.show(10)"
    ]
@@ -396,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,32 +320,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+----+----------+-----------------+\n",
-      "|year|population|unemployment_rate|\n",
-      "+----+----------+-----------------+\n",
-      "|1855|     23241|             3.73|\n",
-      "|1856|     23466|             3.52|\n",
-      "|1857|     23689|             3.95|\n",
-      "|1858|     23914|             5.23|\n",
-      "|1859|     24138|             3.27|\n",
-      "|1860|     24360|             2.94|\n",
-      "|1861|     24585|             3.72|\n",
-      "|1862|     24862|             4.68|\n",
-      "|1863|     25142|             4.15|\n",
-      "|1864|     25425|             2.99|\n",
-      "+----+----------+-----------------+\n",
-      "only showing top 10 rows\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "unemployment.show(10)"
    ]
@@ -463,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,17 +353,17 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Scala 2.12.11",
+   "display_name": "Scala 2.12.10",
    "language": "scala",
    "name": "scala"
   },
   "language_info": {
    "codemirror_mode": "text/x-scala",
-   "file_extension": ".scala",
+   "file_extension": ".sc",
    "mimetype": "text/x-scala",
    "name": "scala",
    "nbconvert_exporter": "script",
-   "version": "2.12.11"
+   "version": "2.12.10"
   }
  },
  "nbformat": 4,
