--- a/workspace/pyspark.ipynb
+++ b/workspace/pyspark.ipynb
@@ -40,7 +40,18 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "22/06/09 03:09:26 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+     ]
+    }
+   ],
    "source": [
     "from pyspark.sql import SparkSession\n",
     "\n",
@@ -88,7 +99,15 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "data = spark.read.csv(path=\"data/uk-macroeconomic-data.csv\", sep=\",\", header=True)"
    ]
@@ -105,6 +124,14 @@
    "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "22/06/09 03:09:33 WARN package: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n",
+      "                                                                                \r"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -142,9 +169,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- Description: string (nullable = true)\n",
+      " |-- Real GDP of England at market prices: string (nullable = true)\n",
+      " |-- Real GDP of England at factor cost : string (nullable = true)\n",
+      " |-- Real UK GDP at market prices, geographically-consistent estimate based on post-1922 borders: string (nullable = true)\n",
+      " |-- Real UK GDP at factor cost, geographically-consistent estimate based on post-1922 borders: string (nullable = true)\n",
+      " |-- Index of real UK GDP at factor cost - based on changing political boundaries, : string (nullable = true)\n",
+      " |-- Composite estimate of English and (geographically-consistent) UK real GDP at factor cost: string (nullable = true)\n",
+      " |-- HP-filter of log of real composite estimate of English and UK real GDP at factor cost: string (nullable = true)\n",
+      " |-- Real UK gross disposable national income at market prices, constant border estimate: string (nullable = true)\n",
+      " |-- Real consumption: string (nullable = true)\n",
+      " |-- Real investment: string (nullable = true)\n",
+      " |-- Stockbuilding contribution: string (nullable = true)\n",
+      " |-- Real government consumption of goods and services: string (nullable = true)\n",
+      " |-- Export volumes: string (nullable = true)\n",
+      " |-- Import volumes: string (nullable = true)\n",
+      " |-- Nominal GDP of England at market prices: string (nullable = true)\n",
+      " |-- Nominal UK GDP at market prices: string (nullable = true)\n",
+      " |-- Nominal UK GDP at market prices.1: string (nullable = true)\n",
+      " |-- Population (GB+NI): string (nullable = true)\n",
+      " |-- Population (England): string (nullable = true)\n",
+      " |-- Employment: string (nullable = true)\n",
+      " |-- Unemployment rate: string (nullable = true)\n",
+      " |-- Average weekly hours worked: string (nullable = true)\n",
+      " |-- Capital Services, whole economy: string (nullable = true)\n",
+      " |-- TFP growth: string (nullable = true)\n",
+      " |-- Labour productivity: string (nullable = true)\n",
+      " |-- Labour productivity.1: string (nullable = true)\n",
+      " |-- Labour share, whole economy excluding rents: string (nullable = true)\n",
+      " |-- GDP deflator at market prices: string (nullable = true)\n",
+      " |-- Export prices: string (nullable = true)\n",
+      " |-- Import prices: string (nullable = true)\n",
+      " |-- Terms of Trade: string (nullable = true)\n",
+      " |-- $ Oil prices: string (nullable = true)\n",
+      " |-- Earnings per head: string (nullable = true)\n",
+      " |-- Consumer price index: string (nullable = true)\n",
+      " |-- Consumer price inflation: string (nullable = true)\n",
+      " |-- Real consumption wages: string (nullable = true)\n",
+      " |-- Wholesale/producer price index: string (nullable = true)\n",
+      " |-- Bank Rate: string (nullable = true)\n",
+      " |-- Bank Rate.1: string (nullable = true)\n",
+      " |-- 10 year/medium-term government bond yields: string (nullable = true)\n",
+      " |-- Consols / long-term government bond yields: string (nullable = true)\n",
+      " |-- Mortgage rates: string (nullable = true)\n",
+      " |-- Corporate borrowing rate from banks: string (nullable = true)\n",
+      " |-- Corporate bond yields: string (nullable = true)\n",
+      " |-- Share prices: string (nullable = true)\n",
+      " |-- $/£ exchange rate: string (nullable = true)\n",
+      " |-- Real $/£ exchange rate: string (nullable = true)\n",
+      " |-- Nominal ERI: string (nullable = true)\n",
+      " |-- Real ERI: string (nullable = true)\n",
+      " |-- House price index: string (nullable = true)\n",
+      " |-- Credit : string (nullable = true)\n",
+      " |-- Secured credit: string (nullable = true)\n",
+      " |-- Bank of England Balance sheet: string (nullable = true)\n",
+      " |-- Bank of England Balance sheet.1: string (nullable = true)\n",
+      " |-- Coin in circulation outside the Bank of England: string (nullable = true)\n",
+      " |-- Notes and coin in circulation: string (nullable = true)\n",
+      " |-- Monetary base: string (nullable = true)\n",
+      " |-- M1: string (nullable = true)\n",
+      " |-- Broad Money : string (nullable = true)\n",
+      " |-- Public sector Total Managed Expenditure: string (nullable = true)\n",
+      " |-- Public sector Total Managed Expenditure.1: string (nullable = true)\n",
+      " |-- Public Sector Total Receipts: string (nullable = true)\n",
+      " |-- Public Sector Total Receipts.1: string (nullable = true)\n",
+      " |-- Public Sector Net Lending(+)/Borrowing(-): string (nullable = true)\n",
+      " |-- Public Sector Net Lending(+)/Borrowing(-).1: string (nullable = true)\n",
+      " |-- UK Public sector debt: string (nullable = true)\n",
+      " |-- UK Public sector debt.1: string (nullable = true)\n",
+      " |-- UK Public sector debt.2: string (nullable = true)\n",
+      " |-- Central Government Gross Debt: string (nullable = true)\n",
+      " |-- Central Government Gross Debt.1: string (nullable = true)\n",
+      " |-- Trade deficit: string (nullable = true)\n",
+      " |-- Trade deficit.1: string (nullable = true)\n",
+      " |-- Current account : string (nullable = true)\n",
+      " |-- Current account .1: string (nullable = true)\n",
+      " |-- Current account deficit including estimated non-monetary bullion flows: string (nullable = true)\n",
+      " |-- Current account deficit including estimated non-monetary bullion flows.1: string (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "data.printSchema()"
    ]
@@ -378,7 +491,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -392,7 +505,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
